Added yomobi upgrade ad. Closes #310

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -402,6 +402,9 @@ en:
 
   builder:
 
+    upgrade_ad:
+      title: "Upgrade to a custom site to remove this ad."
+
     sidebar:
       view_mobile_site: "View Mobile Site"
       email_followers: "Email Your Followers"
