--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -715,12 +715,12 @@ es:
       max_domain_count: "@@You have reached the maximum number of domains for this mobile site (5)."
     # site_manager
     help:
-      renew_subscription: '<img class="help-bubble" src="/images/ui/help-bubble.png"> @@i18n RENEW HELP'
-      site_access_list: '@@<img class="help-bubble" src="/images/ui/help-bubble.png">To manage a site, select it in the list below, then use the configuration panel on the right to edit or update the site. <a href="http://help.yomobi.com/SiteManager" target="ymhelp"><b>Click here for more information.</b></a>'
-      signup_keys: '<a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp"><img class="help-bubble" src="/images/ui/help-bubble.png"></a>Cuando estés listo para entregar este sitio a su propietario, genera una clave de registro, luego envía por email el enlace al propietario del sitio. Asegúrate que haga click en el enlace para que se registre ante Yomobi y tome posesión de su sitio. <a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp"><b>Haz click aquí para mayor información.</b></a>'
-      manage_site_type: '@@<img class="help-bubble" src="/images/ui/help-bubble.png">Select a payment option below to upgrade your mobile site to a Custom account, or to renew your Custom account. <a href="http://help.yomobi.com/SiteManager/SiteTypes" target="ymhelp">Click here for more information about a Custom account and making payments.</a>'
-      manage_custom_domain: '@@<a href="http://help.yomobi.com/SiteManager/CustomDomain" target="ymhelp"><img class="help-bubble" src="/images/ui/help-bubble.png">Click here to learn how to associate a custom domain with your mobile site.</a>'
-      manage_site_admins: '@@<a href="http://help.yomobi.com/SiteManager/SiteAdmins" target="ymhelp"><img class="help-bubble" src="/images/ui/help-bubble.png">Click here to learn how to manage site administrators.</a>'
+      renew_subscription: '@@i18n RENEW HELP'
+      site_access_list: '@@To manage a site, select it in the list below, then use the configuration panel on the right to edit or update the site.<br/></br><a href="http://help.yomobi.com/SiteManager" target="ymhelp"><b>Click here for more information.</b></a>'
+      signup_keys: 'Cuando estés listo para entregar este sitio a su propietario, genera una clave de registro, luego envía por email el enlace al propietario del sitio. Asegúrate que haga click en el enlace para que se registre ante Yomobi y tome posesión de su sitio.<br/></br><a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp"><b>Haz click aquí para mayor información.</b></a>'
+      manage_site_type: '@@Select a payment option below to upgrade your mobile site to a Custom account, or to renew your Custom account.<br/></br><a href="http://help.yomobi.com/SiteManager/SiteTypes" target="ymhelp"><b>Click here for more information about a Custom account and making payments.</b></a>'
+      manage_custom_domain: '@@<a href="http://help.yomobi.com/SiteManager/CustomDomain" target="ymhelp"><b>Click here to learn how to associate a custom domain with your mobile site.</b></a>'
+      manage_site_admins: '@@<a href="http://help.yomobi.com/SiteManager/SiteAdmins" target="ymhelp"><b>Click here to learn how to manage site administrators.</b></a>'
     confirm:
       concede_site: ¿Estás seguro(a)? Cederás / Perderás la propiedad de este sitio.
     dialog:
