--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -403,7 +403,7 @@ es:
   builder:
 
     upgrade_ad:
-      title: "@@Upgrade to a custom site to remove this ad."
+      title: "@@Click here to learn how to upgrade your site type to remove this ad bar and to enable additional customization."
 
     sidebar:
       view_mobile_site: "Ver Sitio Móvil"
