Added subscription_fail subject and body to es.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -651,8 +651,8 @@ en:
       subject: "Payment failed for %{site_name}"
       body: "Your payment has failed"
     subscription_fail:
-      subject: "Subscription Payment failed for %{site_name}"
-      body: "Your subscription payment has failed"
+      subject: "Subscription payment failed for %{site_name}"
+      body: "Your subscription payment has failed."
 
 
   site_manager:
