--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -650,6 +650,9 @@ es:
     email_bad:
       subject: "@@Payment failed for %{site_name}"
       body: "@@Your payment has failed"
+    subscription_fail:
+      subject: "@@Subscription payment failed for %{site_name}."
+      body: "@@Your subscription payment has failed."
 
 
   site_manager:
