--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -684,6 +684,16 @@ es:
     cancel_success: "@@Subscription cancelled sucessfully."
     payment_complete: "@@Site successfully upgraded."
     renew_subscription: "@@Renew Subscription / Prepay"
+    next_charge: "@@next charge"
+    expires: "@@expires"
+
+    select_payment_option: "@@Select a payment option:"
+    opt_one_month: "@@One Month - %{price}"
+    opt_one_year: "@@One Year - %{price}"
+    opt_monthly: "@@Autopay Monthly - %{price} / month"
+    opt_yearly: "@@Autopay Yearly - %{price} / year"
+    i_agree: "@@I agree to these terms"
+
 
     setup: "@@Setup"
     custom_domains: "@@Custom Domains"
