i18n back button in site manager.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -694,7 +694,7 @@ es:
     opt_monthly: "@@Autopay Monthly - %{price} / month"
     opt_yearly: "@@Autopay Yearly - %{price} / year"
     i_agree: "@@I agree to these terms"
-
+    back: "&larr; Regresar"
 
     setup: "@@Setup"
     custom_domains: "@@Custom Domains"
