--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -10,6 +10,7 @@ es:
 
   date_formats:
     payment: "%B %d, %Y"
+    site_grade_dates: "%Y-%m-%d"
 
   general:
     click_here_start: "Haz click aquí"
