--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -9,7 +9,7 @@ es:
     share: "@@Share:"
 
   date_formats:
-    payment: "%B %d, %Y"
+    payment: "%d/%m/%Y"
     site_grade_dates: "%Y-%m-%d"
 
   general:
@@ -18,6 +18,8 @@ es:
     ok: "OK"
     date: "@@Date"
     site: "@@Site"
+    site_url: "@@Site URL"
+    site_name: "@@Site Name"
     amount: "@@Amount"
 
   days:
