--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -10,7 +10,7 @@ es:
 
   date_formats:
     payment: "%d/%m/%Y"
-    site_grade_dates: "%Y-%m-%d"
+    site_grade_dates: "%b %d, %Y"
 
   general:
     click_here_start: "Haz click aquí"
@@ -694,7 +694,7 @@ es:
     payment_complete: "@@This site has been successfully upgraded."
     renew_subscription: "@@Renew Subscription"
     next_charge: "@@next charge: {{ nextChargeDate }})"
-    expires: "@@expires {{ expireDate }}"
+    expires: "@@expires: {{ expireDate }}"
 
     select_payment_option: "@@Select a payment option:"
     opt_one_month: "@@One Month - %{price}"
